checkout page and some changes

--- a/cart.html
+++ b/cart.html
@@ -22,8 +22,8 @@
         </button>
         <div class="overlay" id="overlay" onclick="toggleMenu()"></div>
       </header>
-      <nav class="nav-container" id="navContainer">
-        <ul>
+      <nav class="nav-container" id="navContainer" >
+        <ul class="list-nav">
           <li><a href="./mens-outerwear.html">Men's Outerwear</a></li>
           <li><a href="./ladies-outwear.html">Ladies Outerwear</a></li>
           <li><a href="./mens-tshirts.html">Men's T-Shirts</a></li>
@@ -35,15 +35,18 @@
 
       <div class="cart-items">
         <div class="cart-container">
-          <img
+          <a href="./single-item.html">
+            <img
             src="./images/mensOutwear/mens_3.jpg"
             alt="Men's tech shell"
             height="75px"
             width="75px"
-          />
+            />
+          </a>
           <div class="cart-details">
-            <p class="outwear-title">Men's Tech Shell Full-Zip</p>
-
+          
+            <p class="outwear-title"><a href="./single-item.html">Men's Tech Shell Full-Zip</a></p>
+            
             <button class="cancel-btn">
               <img src="./images/close.png" alt="close"/>
             </button>
