--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
       </header>
       <nav class="nav-container" id="navContainer">
         <ul>
-          <li><a href="./mens-outerwear.html">Men's Outerwear</a></li>
+          <li><a href="./mens-outerwear.html"><li>Men's Outerwear</li></a>
           <li><a href="./ladies-outwear.html">Ladies Outerwear</a></li>
           <li><a href="./mens-tshirts.html">Men's T-Shirts</a></li>
           <li><a href="./ladies-tshirts.html">Ladies T-Shirts</a></li>
